Do not watch not watchable file systems.

Provided file systems which are not watchable shouldn't have it's
*Watcher methods called.

Test: Browser tests.
Bug: 796334
Change-Id: I758a922359c64b5fcc2b9ba2dd4b8e5d0c3ed9c6
Reviewed-on: https://chromium-review.googlesource.com/839500
Reviewed-by: Naoki Fukino <fukino@chromium.org>
Commit-Queue: Tomasz Mikolajewski <mtomasz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528230}