chrome/browser/chromeos/file_system_provider/fileapi/watcher_manager.cc
@@ -7,6 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/files/file.h"
 #include "chrome/browser/chromeos/file_system_provider/mount_path_util.h"
+#include "chrome/browser/chromeos/file_system_provider/provided_file_system_info.h"
 #include "chrome/browser/chromeos/file_system_provider/provided_file_system_interface.h"
 #include "content/public/browser/browser_thread.h"
 #include "storage/browser/fileapi/file_system_url.h"
@@ -48,6 +49,11 @@ void AddWatcherOnUIThread(const storage::FileSystemURL& url,
     return;
   }
 
+  if (!parser.file_system()->GetFileSystemInfo().watchable()) {
+    callback.Run(base::File::FILE_ERROR_INVALID_OPERATION);
+    return;
+  }
+
   parser.file_system()->AddWatcher(url.origin(),
                                    parser.file_path(),
                                    recursive,
@@ -64,6 +70,11 @@ void RemoveWatcherOnUIThread(const storage::FileSystemURL& url,
   util::FileSystemURLParser parser(url);
   if (!parser.Parse()) {
     callback.Run(base::File::FILE_ERROR_SECURITY);
+    return;
+  }
+
+  if (!parser.file_system()->GetFileSystemInfo().watchable()) {
+    callback.Run(base::File::FILE_ERROR_INVALID_OPERATION);
     return;
   }
 
